adding mysal and nltk

--- a/VM/ipynb/Session 6 (MySQL installation).ipynb
+++ b/VM/ipynb/Session 6 (MySQL installation).ipynb
@@ -213,7 +213,7 @@
       "# The final parameter is the database name.\n",
       "host = 'localhost'\n",
       "username = 'root'\n",
-      "password = 'rootpass'\n",
+      "password = 'jane@nyu2013'\n",
       "database = 'imdb'\n",
       "con = mdb.connect(host, username, password, database);\n",
       "\n",
@@ -229,17 +229,14 @@
      "metadata": {},
      "outputs": [
       {
-       "ename": "ImportError",
-       "evalue": "No module named MySQLdb",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-4-f55970fc7bc2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mMySQLdb\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mmdb\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# The connect() method has four parameters.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# The first parameter is the host, where the MySQL database is located.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mImportError\u001b[0m: No module named MySQLdb"
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Database version: ('5.5.40-0ubuntu0.12.04.1',)\n"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -256,7 +253,7 @@
       "import sys\n",
       "\n",
       "# Now we create a table and populate it with some data.\n",
-      "con = mdb.connect('localhost', 'root', 'rootpass', 'imdb');\n",
+      "con = mdb.connect('localhost', 'root', 'jane@nyu2013', 'imdb');\n",
       "\n",
       "with con:\n",
       "    cur = con.cursor()\n",
@@ -266,7 +263,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "((1L, 'Todd', '1'), (2L, 'Les', '12 Poissons'), (3L, 'Lejaren', \"a'Hiller\"), (4L, 'Nian', 'A'), (5L, 'Khairiya', 'A-Mansour'), (6L, 'Ricardo', 'A. Solla'), (8L, 'Kodanda Rami Reddy', 'A.'), (9L, 'Nageswara Rao', 'A.'), (10L, 'Yuri', 'A.'), (11L, 'Swamy', 'A.S.A.'))\n"
+       ]
+      }
+     ],
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -294,7 +300,25 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1 Todd 1\n",
+        "2 Les 12 Poissons\n",
+        "3 Lejaren a'Hiller\n",
+        "4 Nian A\n",
+        "5 Khairiya A-Mansour\n",
+        "6 Ricardo A. Solla\n",
+        "8 Kodanda Rami Reddy A.\n",
+        "9 Nageswara Rao A.\n",
+        "10 Yuri A.\n",
+        "11 Swamy A.S.A.\n"
+       ]
+      }
+     ],
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -328,17 +352,23 @@
      "metadata": {},
      "outputs": [
       {
-       "ename": "ImportError",
-       "evalue": "No module named MySQLdb",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-1-f05f361a34fa>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mMySQLdb\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mmdb\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# The dictionary cursor\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# There are multiple cursor types in the MySQLdb module.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mImportError\u001b[0m: No module named MySQLdb"
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1 Todd 1\n",
+        "2 Les 12 Poissons\n",
+        "3 Lejaren a'Hiller\n",
+        "4 Nian A\n",
+        "5 Khairiya A-Mansour\n",
+        "6 Ricardo A. Solla\n",
+        "8 Kodanda Rami Reddy A.\n",
+        "9 Nageswara Rao A.\n",
+        "10 Yuri A.\n",
+        "11 Swamy A.S.A.\n"
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 7
     },
     {
      "cell_type": "heading",
@@ -367,7 +397,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -384,11 +415,21 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%sql mysql://root:rootpass@localhost:3306/imdb"
+      "%sql mysql://root:jane@nyu2013@localhost:3306/imdb"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 10,
+       "text": [
+        "u'Connected: root@imdb'"
+       ]
+      }
+     ],
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -398,7 +439,58 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "7 rows affected.\n"
+       ]
+      },
+      {
+       "html": [
+        "<table>\n",
+        "    <tr>\n",
+        "        <th>Tables_in_imdb</th>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>actors</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>directors</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>directors_genres</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>movies</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>movies_directors</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>movies_genres</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>roles</td>\n",
+        "    </tr>\n",
+        "</table>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 11,
+       "text": [
+        "[('actors',),\n",
+        " ('directors',),\n",
+        " ('directors_genres',),\n",
+        " ('movies',),\n",
+        " ('movies_directors',),\n",
+        " ('movies_genres',),\n",
+        " ('roles',)]"
+       ]
+      }
+     ],
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -408,7 +500,71 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "4 rows affected.\n"
+       ]
+      },
+      {
+       "html": [
+        "<table>\n",
+        "    <tr>\n",
+        "        <th>Field</th>\n",
+        "        <th>Type</th>\n",
+        "        <th>Null</th>\n",
+        "        <th>Key</th>\n",
+        "        <th>Default</th>\n",
+        "        <th>Extra</th>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>id</td>\n",
+        "        <td>int(11)</td>\n",
+        "        <td>NO</td>\n",
+        "        <td>PRI</td>\n",
+        "        <td>0</td>\n",
+        "        <td></td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>first_name</td>\n",
+        "        <td>varchar(100)</td>\n",
+        "        <td>YES</td>\n",
+        "        <td>MUL</td>\n",
+        "        <td>None</td>\n",
+        "        <td></td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>last_name</td>\n",
+        "        <td>varchar(100)</td>\n",
+        "        <td>YES</td>\n",
+        "        <td>MUL</td>\n",
+        "        <td>None</td>\n",
+        "        <td></td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>gender</td>\n",
+        "        <td>char(1)</td>\n",
+        "        <td>YES</td>\n",
+        "        <td></td>\n",
+        "        <td>None</td>\n",
+        "        <td></td>\n",
+        "    </tr>\n",
+        "</table>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 12,
+       "text": [
+        "[('id', 'int(11)', 'NO', 'PRI', '0', ''),\n",
+        " ('first_name', 'varchar(100)', 'YES', 'MUL', None, ''),\n",
+        " ('last_name', 'varchar(100)', 'YES', 'MUL', None, ''),\n",
+        " ('gender', 'char(1)', 'YES', '', None, '')]"
+       ]
+      }
+     ],
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -418,7 +574,62 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "3 rows affected.\n"
+       ]
+      },
+      {
+       "html": [
+        "<table>\n",
+        "    <tr>\n",
+        "        <th>Field</th>\n",
+        "        <th>Type</th>\n",
+        "        <th>Null</th>\n",
+        "        <th>Key</th>\n",
+        "        <th>Default</th>\n",
+        "        <th>Extra</th>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>actor_id</td>\n",
+        "        <td>int(11)</td>\n",
+        "        <td>YES</td>\n",
+        "        <td>MUL</td>\n",
+        "        <td>None</td>\n",
+        "        <td></td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>movie_id</td>\n",
+        "        <td>int(11)</td>\n",
+        "        <td>YES</td>\n",
+        "        <td>MUL</td>\n",
+        "        <td>None</td>\n",
+        "        <td></td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>role</td>\n",
+        "        <td>varchar(100)</td>\n",
+        "        <td>YES</td>\n",
+        "        <td>MUL</td>\n",
+        "        <td>None</td>\n",
+        "        <td></td>\n",
+        "    </tr>\n",
+        "</table>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 13,
+       "text": [
+        "[('actor_id', 'int(11)', 'YES', 'MUL', None, ''),\n",
+        " ('movie_id', 'int(11)', 'YES', 'MUL', None, ''),\n",
+        " ('role', 'varchar(100)', 'YES', 'MUL', None, '')]"
+       ]
+      }
+     ],
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -428,7 +639,34 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1 rows affected.\n"
+       ]
+      },
+      {
+       "html": [
+        "<table>\n",
+        "    <tr>\n",
+        "        <th>count(role)</th>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>3432630</td>\n",
+        "    </tr>\n",
+        "</table>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 14,
+       "text": [
+        "[(3432630L,)]"
+       ]
+      }
+     ],
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
