add final project

--- a/VM/ipynb/Session 7 (Natural Language Processing).ipynb
+++ b/VM/ipynb/Session 7 (Natural Language Processing).ipynb
@@ -102,7 +102,7 @@
       "true_content = content[s+len(start_phrase):e]\n",
       "\n",
       "# Approximate bytes of text\n",
-      "print len(true_content)"
+      "print type(true_content)"
      ],
      "language": "python",
      "metadata": {},
@@ -111,11 +111,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "951128\n"
+        "<type 'unicode'>\n"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
